# LeviStone

./: .gitignore  .gitmodules  CHANGELOG.md  MANIFEST.in  README.md  README.zh.md  pyproject.toml  setup.py  xmake.lua
.github/workflows/: build.yaml  wheel.yaml
patches/: Disable_vulnerability_fixes_already_included_in_LeviLamina.patch  chore__patch_symbols_toml.patch  feat__add_support_for_BDS_v1_21_113.patch  refactor__patch_vulnerability_fixes.patch
src/bedrock/: symbol.h
src/bedrock/server/commands/: command_registry.cpp  command_registry.h
src/endstone/core/command/defaults/: version_command.cpp
src/endstone/runtime/: endstone_runtime.cpp  hook.cpp  hook.h  state.cpp  symbol.cpp  vtable_hook.cpp
src/endstone/runtime/bedrock_hooks/: command_registry.cpp  dedicated_server.cpp  item.cpp  server_network_handler.cpp
src/levi/core/: version_command.cpp
src/levistone/core/: crash_handler.cpp  logger_factory.cpp  signal_handler.cpp  version_command.cpp
src/levistone/runtime/: endstone_get_server.cpp  endstone_runtime.cpp  endstone_runtime.h  hook.cpp  state.cpp  symbol.cpp
src/levistone/runtime/bedrock_hooks/: certificate.cpp  dedicated_server.cpp
