[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "levistone"
authors = [
    { name = "Vincent Wu", email = "magicdroidx@gmail.com" }
]
description = "Endstone offers a plugin API for Bedrock Dedicated Servers, supporting both Python and C++."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["plugin", "python", "minecraft", "bedrock"]
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "aiohttp",
    "asyncio",
    "click",
    "importlib-metadata",
    "importlib-resources",
    "lazy-loader",
    "numpy",
    "packaging",
    "pkginfo",
    "psutil",
    "pyyaml",
    "requests",
    "rich",
    "tomlkit",
    "typing-extensions",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["endstone-stubgen", "pytest"]

[project.urls]
Changelog = "https://endstone.readthedocs.io/en/latest/changelog"
Discussions = "https://github.com/orgs/EndstoneMC/discussions"
Documentation = "https://endstone.readthedocs.io"
Homepage = "https://github.com/EndstoneMC/endstone"
Issues = "https://github.com/EndstoneMC/endstone/issues"

[project.scripts]
endstone = "endstone._internal.bootstrap:cli"

[tool.ruff]
extend-exclude = ["endstone_python.pyi"]
line-length = 120
lint.extend-select = ["I"]
